2004-06-18  Rodrigo Moya <rodrigo@novell.com>

	Fixes #58747

	* gui/dialogs/comp-editor.c (prompt_to_save_changes): if the source
	is read only, don't prompt the user.

2004-06-18  Rodrigo Moya <rodrigo@novell.com>

	Fixes #56323

	* gui/calendar-component.c (create_new_event): removed read-only
	check, just call the editor with the currently selected client and
	let it do the job.

	* gui/tasks-component.c (create_new_todo): ditto.

2004-06-18  Rodrigo Moya <rodrigo@novell.com>

	Fixes #60293

	* gui/dialogs/recurrence-page.c (type_toggled_cb): make sure
	we enable/disable correctly the 'Add' button.

2004-06-17 Sivaiah Nallagatla <snallagatla@novell.com>

        * gui/itip-utils.c (itip_publish_comp) : check for
        host being non-NULL in soup uri. host can be null
        for uri's of the form file:/foo or http:/foo etc

2004-06-17  Rodrigo Moya <rodrigo@novell.com>

	Fixes #60309

	* gui/meeting-page.c (sensitize_widgets): moved up in the file, to
	be declared before any use.

2004-06-16  Rodrigo Moya <rodrigo@novell.com>

	* gui/e-itip-control.c: use e-util's HTML conversion function,
	instead of camel's.
	(write_html): use e_text_to_html_full().

2004-06-15  JP Rosevear  <jpr@novell.com>

	Fixes #56197
	
	* gui/e-cal-list-view.etspec: add back categories

	* gui/e-calendar-table.etspec: ditto
	
2004-06-15  JP Rosevear  <jpr@novell.com>

	Fixes #59401
	
	* gui/e-week-view.c (e_week_view_on_text_item_event): if we are
	editing the event, don't ignore the right click, stop editing the
	event and continue on

2004-06-15  JP Rosevear  <jpr@novell.com>

	Fixes #57393
	
	* gui/e-week-view.c (e_week_view_set_compress_weekend): redraw the
	titles as well since the spacing is different

2004-06-15  Rodrigo Moya <rodrigo@novell.com>

	* gui/dialogs/meeting-page.c (meeting_page_construct): connect
	to "client_changed" signal on the page.
	(client_changed_cb): new callback.
	(sensitize_widgets): new function.
	(meeting_page_fill_widgets): call sensitize_widgets().
